--- a/src/templates/accounts/dashboard/dashboard.html
+++ b/src/templates/accounts/dashboard/dashboard.html
@@ -73,7 +73,7 @@
     <!-- my comments and rates -->
     {% if is_customer %}
         <a href="{% url 'customers:my-comment-list' %} "
-           class="list-group-item list-group-item-action {{ customer_register }}">
+           class="list-group-item list-group-item-action {{ my_comment_list_section }}">
             نظرات و امتیازات من
         </a>
     {% endif %}
