fix: change `discount` to `store_discount` in the `store_product_list.html`

--- a/src/templates/products/store_product_list.html
+++ b/src/templates/products/store_product_list.html
@@ -85,9 +85,9 @@
                         <!-- rating -->
 
                         <!-- discount -->
-                        {% if store_product.discount %}
+                        {% if store_product.store_discount %}
                             <div class="bg-danger text-white fw-bold rounded-1 px-2  position-absolute bottom-0 start-0">
-                                <p class="card-text">{{ store_product.discount }}</p>
+                                <p class="card-text">{{ store_product.store_discount }}</p>
                             </div>
                         {% endif %}
                         <!-- discount -->
