fix: move the `MyCommentListView` from the `customers` app to the `products` app.

--- a/src/templates/accounts/dashboard/dashboard.html
+++ b/src/templates/accounts/dashboard/dashboard.html
@@ -62,7 +62,7 @@
 
 
     {% if is_customer %} <!-- my comments and rates -->
-        <a href="{% url 'customers:my-comment-list' %} "
+        <a href="{% url 'products:my-comment-list' %} "
            class="list-group-item list-group-item-action {{ my_comment_list_section }}">
             نظرات و امتیازات من
         </a>
