fix: change the `store_product_detail` page to the `product_detail` page

--- a/src/templates/products/comment_list.html
+++ b/src/templates/products/comment_list.html
@@ -13,7 +13,7 @@
                     <p class="text-muted m-0 fs-6">وضعیت: {{ comment.status }}</p>
                     <p class="mb-0">
                         محصول:
-                        <a href="{% url 'products:store-product-detail' comment.product.id %}">
+                        <a href="{% url 'products:product-detail' comment.product.id %}">
                             {{ comment.product.name }}
                         </a>
                     </p>
